# s3git

./: .s3gitignore  Dockerfile  README.md  publish.sh  pyproject.toml
src/: handler.py
