[project]
name = "s3git"
version = "0.1.0"
description = "Detect changes in S3 and push updates to a Git repository using a Lambda function triggered by S3 events"
authors = [
    { name = "CHISEN Kaoru", email = "cordx56@cordx.cx" }
]
dependencies = [
    "GitPython>=3.1.43",
    "boto3>=1.35.54",
    "aws-lambda-typing>=2.20.0",
    "boto3-type-annotations>=0.3.1",
    "python-dotenv>=1.0.1",
    "ignorelib>=0.3.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[tool.rye]
managed = true
dev-dependencies = []
